--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,18 @@ body {
 a{
     color: #FF5F00;
     font-family: 'Acme', sans-serif;
-    border: red 1px solid;
-    background-color: yellow;
+    background-color: #feb23978;
     padding: 10px 15px;
     border-radius: 0.5rem;
     box-shadow: 0 2px 2px 0 rgba(37, 36, 36, 0.697);
 }
+
+a:hover{
+    color:#fff;
+    background-color: #FEB139;
+}
+
+
 
 .navbar p {
     margin: 5px 0;
