--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@
 
 body {
     text-align: center;
- 
     background-image: url(/background.jpg);
     background-size: cover;
     font-family: 'Nunito', sans-serif;
-    
+
+
 }
 
 .navbar {
@@ -25,7 +25,7 @@ body {
 
 }
 
-a{
+a {
     color: #FF5F00;
     font-family: 'Acme', sans-serif;
     background-color: #feb23978;
@@ -34,8 +34,8 @@ a{
     box-shadow: 0 2px 2px 0 rgba(37, 36, 36, 0.697);
 }
 
-a:hover{
-    color:#fff;
+a:hover {
+    color: #fff;
     background-color: #FEB139;
 }
 
@@ -48,16 +48,20 @@ a:hover{
 .card {
     background-color: #F2FA5A;
     box-shadow: 5px 5px rgba(37, 36, 36, 0.697);
+    margin-bottom: 20px;
 }
 
-.card-title{
+.card-title {
     font-family: 'Acme', sans-serif;
 }
 
 
 .main {
-    padding: 5% 0 5%;
+    padding: 5% 50px 5%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    flex-shrink: 4;
+    flex-direction: row;
+
 }
