--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,16 @@ body {
     font-family: 'Nunito', sans-serif;
 
 
+
 }
 
 .navbar {
-    background: rgb(176, 31, 228);
-    background: linear-gradient(90deg, rgba(176, 31, 228, 1) 31%, rgba(255, 0, 233, 1) 82%);
+    background: rgb(152, 14, 203);
+    background: linear-gradient(90deg, rgba(176, 31, 228, 1) 31%, rgb(235, 124, 255) 82%);
     color: #fff;
     justify-content: center;
     font-family: 'Acme', sans-serif;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     box-shadow: 5px 5px rgba(37, 36, 36, 0.697);
 
 }
