--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,10 @@
 
 body {
     text-align: center;
-    background-image: url(/background.jpg);
+    background-image: url(/bg.jpg);
     background-size: cover;
     font-family: 'Nunito', sans-serif;
+    background-repeat: no-repeat;
 
 
 
@@ -17,27 +18,27 @@ body {
 
 .navbar {
     background: rgb(152, 14, 203);
-    background: linear-gradient(90deg, rgba(176, 31, 228, 1) 31%, rgb(235, 124, 255) 82%);
+    background: linear-gradient(90deg, rgb(16, 11, 171) 31%, rgb(124, 150, 255) 82%);
     color: #fff;
     justify-content: center;
     font-family: 'Acme', sans-serif;
-    font-size: 1.8rem;
+    font-size: 2.0rem;
     box-shadow: 5px 5px rgba(37, 36, 36, 0.697);
 
 }
 
 a {
-    color: #FF5F00;
+    color: #fff;
     font-family: 'Acme', sans-serif;
-    background-color: #feb23978;
+    background-color: #B91646;
     padding: 10px 15px;
     border-radius: 0.5rem;
     box-shadow: 0 2px 2px 0 rgba(37, 36, 36, 0.697);
 }
 
 a:hover {
-    color: #fff;
-    background-color: #FEB139;
+    color: #890F0D;
+    background-color: #fff
 }
 
 
@@ -47,7 +48,7 @@ a:hover {
 }
 
 .card {
-    background-color: #F2FA5A;
+    background-color: #FFD124;
     box-shadow: 5px 5px rgba(37, 36, 36, 0.697);
     margin-bottom: 20px;
 }
